0.0.5
Added list box.

0.0.1
Set width/height of form dialog from opts.
Added simple form box.
Added item box.
Added input box.
Updated default options.
1st commit.
Started message boxes.