@@ -59,3 +59,4 @@ YadQt/app/yadqt
 *.o
 config.h
 YadQt/sources
+*~
