@@ -1,4 +1,5 @@
 0.0.5
+Added output separator to options for multiple selections.
 Added list box.
 
 0.0.1
